--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@
 # Eclipse project files
 *.cproject
 *.project
+
+# CMAKE 
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+# Ignore IDR executable
+spp
